--- a/js/pages/hotel/hotel.html
+++ b/js/pages/hotel/hotel.html
@@ -1,11 +1,16 @@
-<div id="pullrefresh" class="mui-scroll-wrapper" ms-controller="hotel" ms-on-swipeup="su" ms-on-swipedown="sd">
+<style>
+    .mui-bar-nav~.mui-content {
+        padding-top: 0px;
+    }
+</style>
+<div id="pullrefresh" class="mui-scroll-wrapper bs-bg-white" ms-controller="hotel" ms-on-swipeup="su" ms-on-swipedown="sd">
     <div class="mui-scroll">
         <div style="position: absolute;top: 40vh;z-index: 10;right: 0;padding-right: 10px;">
             <button type="button" class="calender-icon bs-bg-red" ms-css-background-image="type?'url(img/clock.png)':'url(img/calendar.svg)'" ms-on-tap="openTimePanel">
             <div class="bs-text-white bs-text-smaller" ms-if="!type" style="line-height: 46px;">{{getToday('day')}}</div>
             </button>
         </div>
-        <div class="bs-text-white bs-text-smaller" style="position: fixed;padding: 0 12px;top: 39vh;left: 0;z-index: 9;background: rgba(0,0,0,0.5);">距离 <span style="position: relative;top: 1px;">{{distance?distance:'...'}} km</span></div>
+        <div class="bs-text-white bs-text-smaller" style="position: absolute;padding: 0 12px;top: 39vh;left: 0;z-index: 9;background: rgba(0,0,0,0.5);">距离 <span style="position: relative;top: 1px;">{{distance?distance:'...'}} km</span></div>
         <div class="swiper-container swiper1" style="height: 45vh;">
             <div class="swiper-wrapper">
                 <div class="swiper-slide" ms-repeat="galleryList" data-repeat-rendered="swiper1Render">
@@ -54,16 +59,15 @@
         </div>
         
         <!-- 房型筛选 -->
-        <div class="typeFilter bs-text-large" ms-on-tap="openRoomFilter()">
-            <div class="typeFilter-item">
-                <img src="img/icon/filter.svg" alt="" style="width: 32px;">
+        <div class="typeFilter bs-text-large">
+            <div class="bs-bg-gold typeFilter-item" style="margin-right: 7px;">
             </div>
-            <div class="typeFilter-item bs-text-51" style="margin: 17px 0 0 5px;flex-grow: 1;">房型筛选
+            <div class="typeFilter-item bs-text-51" style="flex-grow: 1;">房型筛选
             </div>
         </div>
         
         <div style="width: 90%;margin: 0 auto;">
-            <div ms-repeat="roomList">
+            <div ms-repeat="roomTypeList">
                 <!-- roomSlide -->
             </div>
         </div>
