--- a/js/pages/order/payend.html
+++ b/js/pages/order/payend.html
@@ -14,7 +14,7 @@
 
     <ul class="order-list" ms-click="goOrder">
         <li class="order-item" ms-repeat="data.orderRoomList" style="padding: 8px 0 8px 10px;">
-            <span class="order-panel-title bs-text-large bs-text-51">{{el.name}}</span>
+            <span class="order-panel-title bs-text-large bs-text-51">{{el.roomType.name + ' ' + el.name}}</span>
             <h5 class="bs-text-small bs-text-102" style="margin: 0 0 20px 0;">
                 <span style="margin-bottom: 8px; display: inline-block;">
                     <!-- 全天房 -->
