1、公益学生详情样式布局调整 2、推广文章页面满足浏览器兼容 3、筛选到0间房的时候显示0间

--- a/js/pages/commonweal/detail.html
+++ b/js/pages/commonweal/detail.html
@@ -32,7 +32,7 @@
                         <div>
                             <img class="detail-head" ms-attr-src="'http://img.bensue.com/' + el.imgUrl" onerror="javascript:this.src='../img/defaultHeadImg.png';">
                         </div>
-                        <div style="margin-left: 30px;">
+                        <div style="margin-left: 8vw;">
                             <div>
                                 <span class="bs-text-normal">{{el.name}}</span>
                                 <span style="margin-left: 40px;">{{el.grade}}</span>
@@ -41,7 +41,7 @@
                                 <div style="margin-top: 12px;width: 62vw;white-space: nowrap;text-overflow: ellipsis;overflow: hidden;">{{el.reason}}</div>
                             </div>
                         </div>
-                        <div style="padding: 15px;">
+                        <div style="padding: 3vw;">
                             <img src="../img/icon/right-arrow.svg" class="arrow">
                         </div>
                     </div>
