1 逐时定价的钟表图案调整 2 隐藏房型页面的筛选按钮 3 增加校园卡相关显示

--- a/js/pages/room/room.html
+++ b/js/pages/room/room.html
@@ -12,7 +12,7 @@
         </div>
         <section style="margin: -10px auto; margin-top: -14px;">
             <div class="hotel">
-                <div style="position: absolute;top: -25px;z-index: 10;right: 0;padding-right: 5px;">
+                <div style="position: absolute;top: -25px;z-index: 10;right: 0;padding-right: 5px;display: none;">
                     <button type="button" class="calender-icon bs-bg-red" style="background-image:url(../img/icon/filter.png);" ms-on-tap="openFilter">
                     </button>
                 </div>
