--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -27,12 +27,17 @@
             <div class="card-buy-item">
                 <div class="card-buy-left">
                     <div class="card-buy-circle bs-text-small">
-                        <div class="card-buy-fan">
+                        <div class="card-buy-fan" :if="@data.type<5">
                             <div class="bs-text-red">{{@data.monthReturnAmount + @data.everyTimeAward * @data.monthShareTimes}}元/月</div>
                             <div class="bs-text-gray" style="font-size: 8px;">推广奖励</div>
                         </div>
+                        <div class="card-buy-fan" :if="@data.type==5">
+                            <div class="bs-text-red">免费入住券</div>
+                            <div class="bs-text-gray" style="font-size: 8px;">邀请好友获赠</div>
+                        </div>
                     </div>
-                    <div class="bs-text-small bs-text-gray card-buy-con1">高额推广奖励，同时亦可享受{{@data.name}}至尊服务</div>
+                    <div class="bs-text-small bs-text-gray card-buy-con1" :if="@data.type<5">高额推广奖励，同时亦可享受{{@data.name}}至尊服务</div>
+                    <div class="bs-text-small bs-text-gray card-buy-con1" :if="@data.type==5">享受{{@data.name}}至尊服务</div>
                 </div>
                 <div class="card-buy-right bs-text-small">
                     <div class="card-buy-con2">
