--- a/js/pages/card/list.html
+++ b/js/pages/card/list.html
@@ -14,11 +14,13 @@
                 <img src="img/icon/right-arrow.svg" style="width: 13px;" alt="">
             </div>
             <div class="bs-text-51 bs-text-smaller" :on-tap="@goBuyCard(el.id)">
-                入住任意本宿酒店即可享受<span class="bs-text-red">{{el.discount*10}}折</span>优惠。
+                入住任意本宿酒店即可享受<span class="bs-text-red">{{el.discount*10}}折</span>优惠
                 <br>
-                加入本宿推广奖励计划，可获得丰厚现金奖励。
+                <span :visible="el.type<4">
+                加入本宿推广奖励计划，可获得丰厚现金奖励
                 <br>
-                参加抽奖次数加速 <span class="bs-text-red">{{el.lotteryShareTimes}}</span> 倍。
+                </span>
+                抽奖次数加速 <span class="bs-text-red">x{{el.lotteryShareTimes}}</span>
             </div>
         </div>
         <img class="card-list-img" :attr="{src:el.imgUrl}" alt="" :on-tap="@goBuyCard(el.id)">
