--- a/js/pages/invite/vip-invite.html
+++ b/js/pages/invite/vip-invite.html
@@ -17,11 +17,13 @@
             邀请好友成为本宿VIP会员，您将获得：
         </div>
         <div class="bs-text-large" style="margin: 30px 0 50px 0;line-height: 28px;">
-            好友成为校园卡会员，您将获得一张<span class="bs-text-red">免费入住券</span>
+            好友成为黑卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{bAward}}</span>元
+            <br>
+            好友成为金卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{gAward}}</span>元
             <br>
             好友成为银卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{sAward}}</span>元
-            <br>好友成为金卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{gAward}}</span>元
-            <br>好友成为黑卡会员，您将获得<span class="bs-text-red" style="display:inline-block;width: 37px;font-size: 18px;text-align: center;">{{bAward}}</span>元
+            <br>
+            好友成为校园卡会员，您将获得一张<span class="bs-text-red">免费入住体验券</span>
         </div>
     </div>
     <div ms-click="maskToggle" class="bs-bg-black bs-text-white" style="font-size: 18px;position: fixed;bottom: 0;line-height: 40px;width: 100%;text-align: center;">邀请好友</div>
