--- a/js/pages/wallet/coupon.html
+++ b/js/pages/wallet/coupon.html
@@ -44,6 +44,7 @@
         padding: 14px 0;
         position: fixed;
         bottom: 0;
+        z-index: 10;
     }
     
     /*箭头*/ 
@@ -63,8 +64,9 @@
     <div style="height: 0;">&nbsp;</div>
     <div class="item" ms-repeat="fundList">
         <div class="left bs-text-white">
-            
-            <span><sub>￥</sub>{{el.money}}</span>
+            <span ms-if="el.type==1"><sub>￥</sub>{{el.money}}</span>
+            <!-- 免费体验券不显示金额，显示备注 -->
+            <div ms-if="el.type==2" style="width: 80px;margin: 0 auto;">{{el.remarks}}</div>
         </div>
         <div class="right bs-bg-white">
             <div class="bs-text-smaller">
@@ -75,7 +77,7 @@
         </div>
     </div>
 
-    <div class="bs-text-gold" style="padding:5px;text-align:center;font-size: 14px;width: 100%;background-color: #efeff4;">
+    <div class="bs-text-gold" style="padding:5px;text-align:center;font-size: 14px;width: 100%;background-color: #efeff4;margin-bottom: 50px;">
         <a id="rulePop" class="bs-text-gold" ms-click="openRule" style="display: block;">使用说明</a>
     </div>
 
