1、日历选择修改，去除动态灰掉，按房型选择了 2、公益总计捐赠改正，记录里添加共计的捐赠金额

--- a/js/pages/commonweal/commonweal-pop.html
+++ b/js/pages/commonweal/commonweal-pop.html
@@ -17,7 +17,7 @@
                 <div class="bs-text-normal">每月捐赠</div>
             </div>
             <div style="padding-top: 20vw;" ms-if="join">
-                <div class="bs-text-gold" style="font-size: 16px;">{{amount}}元</div>
+                <div class="bs-text-gold" style="font-size: 16px;">{{totalAmount}}元</div>
                 <div class="bs-text-normal">您已捐赠</div>
             </div>
         </div>
