--- a/js/pages/commonweal/record.html
+++ b/js/pages/commonweal/record.html
@@ -1,7 +1,10 @@
 <div ms-controller="record" style="height: 100vh; background-color: white; padding: 30px 20px;">
     <div ms-if="join">
+        <div class="bs-text-larger" style="margin-bottom: 15px;">
+            共捐赠  <span class="intro-text-red">{{totalAmount+bensueAmount}}</span> 元
+        </div>
         <div style="display: flex;justify-content: space-between;">
-            <div class="bs-text-larger bs-text-normal">共累计捐赠
+            <div class="bs-text-larger bs-text-normal">您已累计捐赠
                 <span class="intro-text-red">{{amount}}</span> 元
             </div>
             <div class="bs-text-larger bs-text-normal">本宿捐赠
