--- a/js/pages/card/card-rule.html
+++ b/js/pages/card/card-rule.html
@@ -1,4 +1,4 @@
-<div class="content-rule">
+<div id="popover-text-content" class="content-rule">
     <div class="content-headtitle">
         本宿会员条款
     </div>
@@ -18,9 +18,9 @@
     <div class="content-title">第四条 会员权益</div>
     <div class="content-text">1. 所购买的会员卡将决定用户成为何种级别的会员，会员有效期为 12 个月（每月以 30 天计算）。
     </div>
-    <div class="content-text">2. 在会员有效期内，黑卡会员，入住本宿酒店时享受 7.5 折优惠；金卡会员入住本宿酒店时享受 8 折优惠；银卡会员入住本宿酒店时享受 8.8 折优惠。享受折扣范围仅限于全天房服务及时租房服务。
+    <div class="content-text">2. 在会员有效期内，不同级别的会员享受相应的折扣，折扣范围仅限于全天房服务及时租房服务。
     </div>
-    <div class="content-text">3. 会员获得的抽奖现金红包以及推广奖励可以用来提现或是在本宿酒店中消费。会员的提现账号应保证真实有效，如因会员绑定账号所造成的包括但不仅限于无法提现，打款账号错误等一系列损失，本宿概不负责。会员每月仅可提现1次。
+    <div class="content-text">3. 会员获得的抽奖现金红包或推广奖励可以用来提现或是在本宿酒店中消费。会员的提现账号应保证真实有效，如因会员绑定账号所造成的包括但不仅限于无法提现，打款账号错误等一系列损失，本宿概不负责。会员每月仅可提现1次。
     </div>
     <div class="content-text">4. 本宿VIP会员享受免审核开通推广奖励活动，活动规则详见《推广条例》。
     </div>
