--- a/js/pages/card/card-withdraw.html
+++ b/js/pages/card/card-withdraw.html
@@ -26,7 +26,7 @@
         position: relative;
     }
 </style>
-<div id="modal-text-content" class="pop-content bs-text-51 mui-ios mui-ios-8 mui-ios-8-0" :controller="withdraw">
+<div id="popover-text-content" class="pop-content bs-text-51 mui-ios mui-ios-8 mui-ios-8-0" :controller="withdraw">
     <div style="background-color: #eee;padding: 0 20px 20px 20px;">
         <div style="text-align: right;">
             <img src="img/close.svg" class="icon-close" alt="" :on-tap="@close">
