--- a/js/pages/card/lottery-log.html
+++ b/js/pages/card/lottery-log.html
@@ -1,4 +1,4 @@
-<div class="content-rule" ms-controller="log">
+<div id="popover-text-content" class="content-rule" ms-controller="log">
     <div class="content-headtitle">
         中奖记录
     </div>
