--- a/js/pages/wallet/coupon-rule.html
+++ b/js/pages/wallet/coupon-rule.html
@@ -1,4 +1,4 @@
-<div id="modal-text-content" class="content-rule">
+<div id="popover-text-content" class="content-rule">
     <!-- <div class="content-headtitle">优惠券使用说明</div> -->
     <div class="content-title">优惠券使用说明</div>
     <div class="content-text">1. 优惠券不能兑换现金，仅作订房抵扣使用。
