新增校园卡会员条款页

--- a/js/pages/card/buy.html
+++ b/js/pages/card/buy.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="card-buy-fan" :if="@data.type==5">
                             <div class="bs-text-red">全额退款</div>
-                            <div class="bs-text-gray" style="font-size: 8px;">入住满6次后</div>
+                            <div class="bs-text-gray" style="font-size: 8px;">入住满6次或满一年后</div>
                         </div>
                     </div>
                     <div class="bs-text-small bs-text-gray card-buy-con1" :if="@data.type<5">高额推广奖励，同时亦可享受{{@data.name}}至尊服务</div>
